samples/_failures_safe/1761609974_343fc9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e92aa7a8.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_e92aa7a8.c:163:13: error: expected expression at end of input
  163 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_e92aa7a8.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e92aa7a8.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e92aa7a8.c:163:13: error: expected declaration or statement at end of input
